--- a/client2/src/main/resources/application.yml
+++ b/client2/src/main/resources/application.yml
@@ -6,14 +6,19 @@
 #security.oauth2.resource.user-info-uri=http://127.0.0.1:8080/user/me
 #
 
+server:
+  servlet:
+    context-path: /client2
+  port: 8082
+
 security:
   oauth2:
     client:
-      clientId: bd1c0a783ccdd1c9b9e4
-      clientSecret: 1a9030fbca47a5b2c28e92f19050bb77824b5ad1
-      accessTokenUri: https://github.com/login/oauth/access_token
-      userAuthorizationUri: https://github.com/login/oauth/authorize
+      clientId: client2
+      clientSecret: 123456
+      accessTokenUri: http://127.0.0.1:8080/oauth/token
+      userAuthorizationUri: http://127.0.0.1:8080/oauth/authorize
       clientAuthenticationScheme: form
     resource:
-      userInfoUri: https://api.github.com/user
-      preferTokenInfo: false
+      userInfoUri: http://127.0.0.1:8080/user/me
+      tokenInfoUri: http://127.0.0.1:8080/oauth/check_token
