--- a/client1/src/main/resources/application.properties
+++ b/client1/src/main/resources/application.properties
@@ -14,4 +14,4 @@ security.oauth2.resource.token-info-uri=http://127.0.0.1:8080/oauth/check_token
 #security.oauth2.sso.login-path=/loginClient1
 #security.oauth2.resource.clientAuthenticationScheme=form
 
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
