--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -15,8 +15,8 @@
         <!-- MyBatis Generator -->
         <!-- Java接口和实体类 -->
         <targetJavaProject>${basedir}/src/main/java</targetJavaProject>
-        <targetMapperPackage>com.github.wxiaoqi.security.admin.mapper</targetMapperPackage>
-        <targetModelPackage>com.github.wxiaoqi.security.admin.entity</targetModelPackage>
+        <targetMapperPackage>com.auth.mapper</targetMapperPackage>
+        <targetModelPackage>com.auth.entity</targetModelPackage>
         <!-- XML生成路径 -->
         <targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
         <targetXMLPackage>mapper</targetXMLPackage>
@@ -27,6 +27,7 @@
         <mybatis-pagehelper.version>5.0.1</mybatis-pagehelper.version>
         <pagehelper.version>4.1.1</pagehelper.version>
         <mybatis-generator.version>1.3.5</mybatis-generator.version>
+        <spring-boot-plugin.version>2.1.1.RELEASE</spring-boot-plugin.version>
     </properties>
 
     <dependencies>
@@ -67,6 +68,11 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>${mybatis-generator.version}</version>
         </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>${mapper.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -97,6 +103,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
