--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=auth
 server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=cim201
