--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -19,7 +19,7 @@
         <targetModelPackage>com.auth.entity</targetModelPackage>
         <!-- XML生成路径 -->
         <targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
-        <targetXMLPackage>mapper</targetXMLPackage>
+        <targetXMLPackage>com.auth.mapper</targetXMLPackage>
         <!-- 依赖版本 -->
         <mapper.version>3.4.0</mapper.version>
         <mybatis.version>3.4.2</mybatis.version>
@@ -27,7 +27,9 @@
         <mybatis-pagehelper.version>5.0.1</mybatis-pagehelper.version>
         <pagehelper.version>4.1.1</pagehelper.version>
         <mybatis-generator.version>1.3.5</mybatis-generator.version>
+        <mybatis-autoconfig.version>1.3.2</mybatis-autoconfig.version>
         <spring-boot-plugin.version>2.1.1.RELEASE</spring-boot-plugin.version>
+        <mybatis-spring-boot-starter.version>2.1.1</mybatis-spring-boot-starter.version>
     </properties>
 
     <dependencies>
@@ -58,11 +60,16 @@
             <!--<artifactId>mybatis-spring</artifactId>-->
             <!--<version>${mybatis-spring.version}</version>-->
         <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.pagehelper</groupId>-->
-            <!--<artifactId>pagehelper</artifactId>-->
-            <!--<version>${mybatis-pagehelper.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>${mybatis-spring-boot-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${mybatis-pagehelper.version}</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.mybatis.generator</groupId>-->
             <!--<artifactId>mybatis-generator-core</artifactId>-->
@@ -70,13 +77,20 @@
         <!--</dependency>-->
         <!--<dependency>-->
             <!--<groupId>tk.mybatis</groupId>-->
-            <!--<artifactId>mapper</artifactId>-->
-            <!--<version>${mapper.version}</version>-->
+            <!--<artifactId>com.auth.mapper</artifactId>-->
+            <!--<version>${com.auth.mapper.version}</version>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-autoconfigure -->
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis.spring.boot</groupId>-->
+            <!--<artifactId>mybatis-spring-boot-autoconfigure</artifactId>-->
+            <!--<version>${mybatis-autoconfig.version}</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
