--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?allowMultiQueries=tru
 #spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=cim201
+spring.datasource.type = com.zaxxer.hikari.HikariDataSource
+
+
+mybatis.mapper-locations=classpath:com/auth/mapper/*.xml
+mybatis.type-aliases-packages=com.auth.mapper
