--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -5,8 +5,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?allowMultiQueries=tru
 #spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=cim201
-spring.datasource.type = com.zaxxer.hikari.HikariDataSource
+#spring.datasource.type = com.zaxxer.hikari.HikariDataSource
+# 使用druid数据源
+spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 
+#mysql
+mysql.datasource.url=jdbc:mysql://localhost:3306/evan_sso?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+mysql.datasource.username=root
+mysql.datasource.password=cim201
+#mysql.datasource.type = com.zaxxer.hikari.HikariDataSource
 
-mybatis.mapper-locations=classpath:com/auth/mapper/*.xml
-mybatis.type-aliases-packages=com.auth.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.type-aliases-packages=com.auth.mapper
