--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -25,16 +25,21 @@
         <mybatis.version>3.4.2</mybatis.version>
         <mybatis-spring.version>1.3.1</mybatis-spring.version>
         <mybatis-pagehelper.version>5.0.1</mybatis-pagehelper.version>
-        <pagehelper.version>4.1.1</pagehelper.version>
+        <pagehelper-spring-boot-starter.version>1.2.10</pagehelper-spring-boot-starter.version>
         <mybatis-generator.version>1.3.5</mybatis-generator.version>
         <mybatis-autoconfig.version>1.3.2</mybatis-autoconfig.version>
         <spring-boot-plugin.version>2.1.1.RELEASE</spring-boot-plugin.version>
         <mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
-        <mapper-spring-boot-starter.version>1.2.4</mapper-spring-boot-starter.version>
+        <mapper-spring-boot-starter.version>2.1.1</mapper-spring-boot-starter.version>
         <alibaba-druid.version>1.1.10</alibaba-druid.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -72,10 +77,11 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>${mapper-spring-boot-starter.version}</version>
         </dependency>
+        <!-- 分页插件 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>${mybatis-pagehelper.version}</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${pagehelper-spring-boot-starter.version}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>org.mybatis.generator</groupId>-->
