--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=auth
+server.servlet.context-path=/authserver
+server.servlet.session.cookie.name=OAUTH2SESSION
 server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
