--- a/client1/src/main/resources/application.properties
+++ b/client1/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8081
 server.servlet.context-path=/client1
+server.servlet.session.cookie.name=CLIENT1SESSION
 security.oauth2.client.client-id=client1
 security.oauth2.client.client-secret=123456
-security.oauth2.client.access-token-uri=http://127.0.0.1:8080/oauth/token
-security.oauth2.client.user-authorization-uri=http://127.0.0.1:8080/oauth/authorize
-security.oauth2.resource.user-info-uri=http://127.0.0.1:8080/user/me
-security.oauth2.resource.token-info-uri=http://127.0.0.1:8080/oauth/check_token 
+security.oauth2.client.access-token-uri=http://127.0.0.1:8080/authserver/oauth/token
+security.oauth2.client.user-authorization-uri=http://127.0.0.1:8080/authserver/oauth/authorize
+security.oauth2.resource.user-info-uri=http://127.0.0.1:8080/authserver/user/me
+security.oauth2.resource.token-info-uri=http://127.0.0.1:8080/authserver/oauth/check_token 
 #security.oauth2.resource.preferTokenInfo=false
 #security.oauth2.client.registered-redirect-uri=http://127.0.0.1:8081
 #security.oauth2.client.pre-established-redirect-uri=http://127.0.0.1:8081
@@ -14,4 +15,4 @@ security.oauth2.resource.token-info-uri=http://127.0.0.1:8080/oauth/check_token
 #security.oauth2.sso.login-path=/loginClient1
 #security.oauth2.resource.clientAuthenticationScheme=form
 
-#logging.level.org.springframework=debug
+logging.level.org.springframework=debug
