--- a/client2/src/main/resources/application.yml
+++ b/client2/src/main/resources/application.yml
@@ -11,17 +11,23 @@ server:
     context-path: /client2
   port: 8082
 
+auth-server: http://localhost:8080/authserver
+
 security:
   oauth2:
     client:
       clientId: client2
       clientSecret: 123456
-      accessTokenUri: http://127.0.0.1:8080/oauth/token
-      userAuthorizationUri: http://127.0.0.1:8080/oauth/authorize
+      accessTokenUri: ${auth-server}/oauth/token
+      userAuthorizationUri: ${auth-server}/oauth/authorize
 #      clientAuthenticationScheme: form
     resource:
-      userInfoUri: http://127.0.0.1:8080/user/me
-      tokenInfoUri: http://127.0.0.1:8080/oauth/check_token
+      userInfoUri: ${auth-server}/user/me
+      tokenInfoUri: ${auth-server}/oauth/check_token
+
+logging:
+  level:
+    org.springframework.security: DEBUG
 
 
 #server:
@@ -38,5 +44,5 @@ security:
 #      userAuthorizationUri: http://127.0.0.1:8081/oauth/authorize
 #      clientAuthenticationScheme: form
 #    resource:
-##      userInfoUri: http://127.0.0.1:8080/user/me
+##      userInfoUri: ${auth-server}/user/me
 #      tokenInfoUri: http://127.0.0.1:8081/oauth/check_token
