--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -19,3 +19,8 @@ mysql.datasource.password=cim201
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 #mybatis.type-aliases-packages=com.auth.mapper
+
+logging.level.org.springframework=debug
+
+
+cors-allowed-origins=http://localhost:8083,http://localhost:8082
