--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -17,7 +17,7 @@ mysql.datasource.username=root
 mysql.datasource.password=cim201
 #mysql.datasource.type = com.zaxxer.hikari.HikariDataSource
 
-mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:com/auth/mapper/*.xml
 #mybatis.type-aliases-packages=com.auth.mapper
 
 logging.level.org.springframework=debug
