--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -32,6 +32,7 @@
         <mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
         <mapper-spring-boot-starter.version>2.1.1</mapper-spring-boot-starter.version>
         <alibaba-druid.version>1.1.10</alibaba-druid.version>
+        <thymeleaf.version>2.1.1.RELEASE</thymeleaf.version>
     </properties>
 
     <dependencies>
@@ -112,6 +113,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${alibaba-druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>${thymeleaf.version}</version>
         </dependency>
     </dependencies>
     <build>
