--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -34,6 +34,10 @@
         <alibaba-druid.version>1.1.10</alibaba-druid.version>
         <thymeleaf.version>2.1.1.RELEASE</thymeleaf.version>
         <spring-boot-start-data-redis.version>2.1.3.RELEASE</spring-boot-start-data-redis.version>
+        <spring-boot-starter-logging.version>2.1.3.RELEASE</spring-boot-starter-logging.version>
+
+        <webjars.bootstrap.version>3.3.7</webjars.bootstrap.version>
+        <webjars.locator.version>0.36</webjars.locator.version>
     </properties>
 
     <dependencies>
@@ -124,6 +128,24 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>${spring-boot-start-data-redis.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-logging -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <version>${spring-boot-starter-logging.version}</version>
+        </dependency>
+
+        <!-- WebJars -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>${webjars.bootstrap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>${webjars.locator.version}</version>
         </dependency>
     </dependencies>
     <build>
