--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -33,10 +33,11 @@
         <mapper-spring-boot-starter.version>2.1.1</mapper-spring-boot-starter.version>
         <alibaba-druid.version>1.1.10</alibaba-druid.version>
         <thymeleaf.version>2.1.1.RELEASE</thymeleaf.version>
+        <thymeleaf.extras-springsecurity.version>3.0.4.RELEASE</thymeleaf.extras-springsecurity.version>
         <spring-boot-start-data-redis.version>2.1.3.RELEASE</spring-boot-start-data-redis.version>
         <spring-boot-starter-logging.version>2.1.3.RELEASE</spring-boot-starter-logging.version>
 
-        <webjars.bootstrap.version>3.3.7</webjars.bootstrap.version>
+        <webjars.bootstrap.version>4.3.1</webjars.bootstrap.version>
         <webjars.locator.version>0.36</webjars.locator.version>
     </properties>
 
@@ -124,6 +125,13 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>${thymeleaf.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+            <version>${thymeleaf.extras-springsecurity.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
