--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -38,6 +38,7 @@
         <spring-boot-starter-logging.version>2.1.3.RELEASE</spring-boot-starter-logging.version>
 
         <webjars.bootstrap.version>4.3.1</webjars.bootstrap.version>
+        <webjars.jquery.version>3.3.1-2</webjars.jquery.version>
         <webjars.locator.version>0.36</webjars.locator.version>
     </properties>
 
@@ -149,6 +150,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
             <version>${webjars.bootstrap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${webjars.jquery.version}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
