--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -37,6 +37,8 @@
         <spring-boot-start-data-redis.version>2.1.3.RELEASE</spring-boot-start-data-redis.version>
         <spring-boot-starter-logging.version>2.1.3.RELEASE</spring-boot-starter-logging.version>
 
+        <google.guava.version>23.0</google.guava.version>
+
         <webjars.bootstrap.version>4.3.1</webjars.bootstrap.version>
         <webjars.jquery.version>3.3.1-2</webjars.jquery.version>
         <webjars.locator.version>0.36</webjars.locator.version>
@@ -143,6 +145,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
             <version>${spring-boot-starter-logging.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${google.guava.version}</version>
         </dependency>
 
         <!-- WebJars -->
