--- a/resource/pom.xml
+++ b/resource/pom.xml
@@ -3,14 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<artifactId>rays-auth</artifactId>
+		<groupId>evan</groupId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com</groupId>
+
 	<artifactId>resource</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>resource</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -34,7 +32,6 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
