add Redis Config

--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -17,10 +17,32 @@ mysql.datasource.username=root
 mysql.datasource.password=cim201
 #mysql.datasource.type = com.zaxxer.hikari.HikariDataSource
 
+
+spring.redis.database=0
+#redis数据库的索引，默认为0
+#spring.redis.sentinel.master=　
+#spring.redis.sentinel.nodes=
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+#spring.redis.password=
+
+spring.redis.lettuce.pool.max-active=7
+spring.redis.lettuce.pool.max-idle=7
+spring.redis.lettuce.pool.min-idle=2
+spring.redis.lettuce.pool.max-wait=1ms
+spring.redis.lettuce.shutdown-timeout=200ms
+
+spring.cache.redis.cache-null-values=true
+spring.cache.redis.time-to-live=600000ms
+spring.cache.redis.use-key-prefix=true
+
+spring.cache.type=redis
+spring.cache.cache-names=articleCache,allArticlesCache
+
 mybatis.mapper-locations=classpath:com/auth/mapper/*.xml
 #mybatis.type-aliases-packages=com.auth.mapper
 
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
 
 
 cors-allowed-origins=http://localhost:8083,http://localhost:8082
