--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -2,6 +2,20 @@ spring.application.name=auth
 server.servlet.context-path=/authserver
 server.servlet.session.cookie.name=OAUTH2SESSION
 server.port=8080
+# Enable response compression
+server.compression.enabled=true
+# The comma-separated list of mime types that should be compressed
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+# Compress the response only if the response size is at least 1KB
+server.compression.min-response-size=1024
+
+server.http2.enabled=true
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore
+server.ssl.key-store-type=JCEKS
+server.ssl.key-store-password=ray-auth
+#server.ssl.key-password=ray-auth
 
 spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
