--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -38,6 +38,7 @@
         <spring-boot-starter-logging.version>2.1.3.RELEASE</spring-boot-starter-logging.version>
 
         <google.guava.version>23.0</google.guava.version>
+        <apache-common-lang3.version>3.8.1</apache-common-lang3.version>
 
         <webjars.bootstrap.version>4.3.1</webjars.bootstrap.version>
         <webjars.jquery.version>3.3.1-2</webjars.jquery.version>
@@ -155,6 +156,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${google.guava.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache-common-lang3.version}</version>
         </dependency>
 
         <!-- WebJars -->
