--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -12,10 +12,14 @@ server.compression.min-response-size=1024
 server.http2.enabled=true
 
 server.ssl.enabled=true
-server.ssl.key-store=classpath:keystore
-server.ssl.key-store-type=JCEKS
-server.ssl.key-store-password=ray-auth
+server.ssl.key-store=classpath:server.jks
+server.ssl.key-store-type=JKS
+server.ssl.key-store-password=secret
 #server.ssl.key-password=ray-auth
+
+#server.ssl.key-store=classpath:keystore
+#server.ssl.key-store-type=JCEKS
+#server.ssl.key-store-password=ray-auth
 
 spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/evan_sso?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -56,7 +60,7 @@ spring.cache.cache-names=articleCache,allArticlesCache
 mybatis.mapper-locations=classpath:com/auth/mapper/*.xml
 #mybatis.type-aliases-packages=com.auth.mapper
 
-#logging.level.org.springframework=debug
+logging.level.org.springframework=debug
 
 
-cors-allowed-origins=http://localhost:8083,http://localhost:8082
+cors-allowed-origins=http://localhost:8083,http://localhost:8082,http://localhost:3000
