update JWT cache

--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.cache.cache-names=articleCache,allArticlesCache
 mybatis.mapper-locations=classpath:com/auth/mapper/*.xml
 #mybatis.type-aliases-packages=com.auth.mapper
 
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
 
 
 cors-allowed-origins=http://localhost:8083,http://localhost:8082,http://localhost:3000
