--- a/Auth/pom.xml
+++ b/Auth/pom.xml
@@ -39,6 +39,7 @@
 
         <google.guava.version>23.0</google.guava.version>
         <apache-common-lang3.version>3.8.1</apache-common-lang3.version>
+        <jjwt.version>0.9.1</jjwt.version>
 
         <webjars.bootstrap.version>4.3.1</webjars.bootstrap.version>
         <webjars.jquery.version>3.3.1-2</webjars.jquery.version>
@@ -150,6 +151,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
             <version>${spring-boot-starter-logging.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
         </dependency>
 
         <dependency>
